<resources>
    <string name="app_name">DistanceMeasurement</string>

    <string name="settings_activity_name">Settings</string>

    <string name="title_devices">Devices</string>
    <string name="title_events">Events</string>
    <string name="label_init_button">INIT</string>
    <string name="label_start_button">START</string>
    <string name="label_stop_button">STOP</string>

    <string name="title_settings">SETTINGS</string>
    <string name="title_back">BACK</string>

    <string name="category_general">General</string>
    <string name="category_measurement">Measurement Methods</string>
    <string name="category_wifi_aware">WiFi Aware</string>
    <string name="category_wifi_rtt">WiFi RTT</string>
    <string name="category_logging">Logging</string>

    <string name="title_wifi_aware">Use WiFi Aware</string>
    <string name="title_wifi_rtt">Use WiFi RTT</string>
    <string name="title_ble">Use BLE</string>
    <string name="title_id">Your ID</string>
    <string name="title_refresh">Refresh Interval (ms)</string>
    <string name="title_interval">Measurement Interval (ms)</string>
    <string name="title_timeout">Device Remove Timeout (ms)</string>
    <string name="title_file">Write Events to File</string>
    <string name="title_filename">Use Specific File Names</string>
    <string name="title_filename_text">File Name</string>

    <string name="notification_channel_name">Distance measurement</string>
    <string name="notification_title">This device is measuring distance</string>
    <string name="notification_text">Tab to turn off measuring</string>

    <string name="error_message_permission_denied">Permission denied</string>
    <string name="error_message_wifi_aware">This device does not support WiFi Aware.</string>
    <string name="error_message_wifi_rtt">This device does not support WiFi RTT.</string>
    <string name="error_message_ble">This device does not support BLE.</string>
    <string name="error_message_ble_turn_on">Turn on Bluetooth.</string>
    <string name="error_message_ble_adv">Bluetooth Advertisements are not supported.</string>
    <string name="error_message_ble_adv_fail">Bluetooth Advertisements failed to start.</string>
    <string name="error_message_ble_scn_fail">Bluetooth Scanning failed to start.</string>
    <string name="error_message_set_id">Set your ID.</string>

    <string name="message_obtain_session">Obtained a session.</string>
    <string name="message_close_session">Closed a session.</string>
    <string name="message_publish_service">Published a service.</string>
    <string name="message_subscribe_service">Subscribed to a session.</string>
    <string name="message_find_new_user">A user (ID: ) is found.</string>
    <string name="message_device_remove">A user (ID: ) is removed.</string>
    <string name="message_wifi_aware_state_changed">WiFi Aware is not currently available.</string>
    <string name="message_wifi_rtt_state_changed">WiFi RTT is not currently available.</string>
    <string name="message_wifi_rtt_ranging_start">WiFi RTT Ranging Start</string>
    <string name="message_wifi_rtt_ranging_failure">WiFi RTT Ranging Failure</string>
    <string name="message_wifi_rtt_ranging_status_success">WiFi RTT Ranging Status Success</string>
    <string name="message_wifi_rtt_ranging_status_fail">WiFi RTT Ranging Status Fail</string>
    <string name="message_ble_ready">BLE Ready</string>
    <string name="message_find_new_user_ble">A user (ID: ) is found. (BLE)</string>
    <string name="message_ble_adv_stop">Stopping Advertising.</string>
    <string name="message_ble_scn_stop">Stopping Scanning.</string>
    <string name="message_io_exception">PrintWriter is not currently available.</string>
</resources>
