<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/category_general">

        <SwitchPreferenceCompat
            app:key="file"
            app:title="@string/title_file" />

        <SwitchPreferenceCompat
            app:dependency="file"
            app:key="filename"
            app:title="@string/title_filename" />

        <EditTextPreference
            app:dependency="filename"
            app:key="filename_text"
            app:title="@string/title_filename_text"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_wifi_aware">

        <EditTextPreference
            app:key="id"
            app:title="@string/title_id"
            app:useSimpleSummaryProvider="true" />

        <!-- temp -->
<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_wifi_rtt">

        <EditTextPreference
            app:key="interval"
            app:title="@string/title_interval"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="500" />

        <EditTextPreference
            app:key="timeout"
            app:title="@string/title_timeout"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="60000" />

    </PreferenceCategory>

</PreferenceScreen>
